--- a/NtxBot/NtxBot.csproj
+++ b/NtxBot/NtxBot.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtensionMethods_Client.cs" />
     <Compile Include="FlashClient.cs" />
     <Compile Include="FormUI.cs">
       <SubType>Form</SubType>
@@ -54,8 +55,8 @@
       <DependentUpon>FormUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Plugin.cs" />
-    <Compile Include="Plugin_Client.cs" />
-    <Compile Include="Plugin_PacketEvents.cs" />
+    <Compile Include="Plugin_ClientInfo.cs" />
+    <Compile Include="Plugin_PacketHanlders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WinApi.cs" />
   </ItemGroup>
