--- a/NtxBot/NtxBot.csproj
+++ b/NtxBot/NtxBot.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtensionMethods_Client.cs" />
+    <Compile Include="ExtensionMethods_Entity.cs" />
     <Compile Include="FlashClient.cs" />
     <Compile Include="FormUI.cs">
       <SubType>Form</SubType>
@@ -54,7 +55,10 @@
     <Compile Include="FormUI.Designer.cs">
       <DependentUpon>FormUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameMap.cs" />
+    <Compile Include="GameMapTile.cs" />
     <Compile Include="Plugin.cs" />
+    <Compile Include="Plugin_HelperMethods.cs" />
     <Compile Include="Plugin_PacketHanlders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WinApi.cs" />
