--- a/NtxBot/NtxBot.csproj
+++ b/NtxBot/NtxBot.csproj
@@ -30,8 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Lib K Relay, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Lib K Relay">
       <HintPath>..\..\KRelay\Lib K Relay\bin\Debug\Lib K Relay.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -69,7 +68,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*" "C:\Users\ivome\Documents\Visual Studio 2017\Projects\KRelay\K_Relay\bin\Debug\Plugins"
+    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*" "$(SolutionDir)..\KRelay\K_Relay\bin\Debug\Plugins"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
