Added a Spatial A* algorithm implementation to the project

--- a/NtxBot/NtxBot.csproj
+++ b/NtxBot/NtxBot.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Plugin_HelperMethods.cs" />
     <Compile Include="Plugin_PacketHanlders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpatialAStar.cs" />
     <Compile Include="WinApi.cs" />
   </ItemGroup>
   <ItemGroup>
