--- a/NtxBot/NtxBot.csproj
+++ b/NtxBot/NtxBot.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AbyssBot.cs" />
     <Compile Include="ExtensionMethods_Client.cs" />
+    <Compile Include="ExtensionMethods_Location.cs" />
     <Compile Include="FlashClient.cs" />
     <Compile Include="FormUI.cs">
       <SubType>Form</SubType>
